Update frontend, bot.js, .env, and add index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crypto Mini Bot</title>
+  <title>Crypto Mini App</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🚀 Crypto Mini Bot</h1>
-  <p>Welcome! This is your frontend running on Netlify.</p>
-
-  <button id="tradeBtn">Start Trade</button>
-
-  <script src="app.js"></script>
+  <h1>Welcome to Crypto Mini App</h1>
+  <p>Click below to open Mini App:</p>
+  <a href="trade.html"><button class="open-app-btn">🚀 Open Mini App</button></a>
 </body>
 </html>
